--- a/3dlab/race.html
+++ b/3dlab/race.html
@@ -25,6 +25,7 @@
     var keyboard = new THREEx.KeyboardState();
     var clock = new THREE.Clock;
     var car, moveDistance;
+    var smoke = new THREE.Object3D();
 
     var scene = new THREE.Scene();
     camera = new THREE.PerspectiveCamera(45, screenWidth / screenHeight, 1, 20000);
@@ -36,7 +37,6 @@
     } else {
         renderer = new THREE.CanvasRenderer();
     }    
-
     //Background color de la escena.
     renderer.setSize( window.innerWidth, window.innerHeight );
     document.body.appendChild(renderer.domElement);
@@ -58,6 +58,15 @@
     ambientLight = new THREE.AmbientLight(0xffffff, 1);
     scene.add(ambientLight);
     
+    const sphere = new THREE.SphereBufferGeometry( 5, 32, 32 );
+    let light = new THREE.PointLight( 0x0040ff, 5, 0 );
+    light.position.set(120, 25, 1550);
+    light.rotation.z = -0.5*Math.PI;
+    light.rotation.x = -0.5*Math.PI;
+	light.add( new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: 0x0040ff } ) ) );
+	scene.add( light );
+
+
     //---------------------------------------------------------------- LOADING MODEL OF CARS      
     var mtlLoaderCar = new THREE.MTLLoader();
         mtlLoaderCar.setResourcePath('/Cirkuits/3dlab/assets/');
@@ -78,45 +87,6 @@
         scene.add(object);                                                          
         });
     });    
-    
-        //---------------------------------------------------------------- LOADING MODEL OF CHECKPOINTS      
-    var mtlLoaderFlag = new THREE.MTLLoader();
-        mtlLoaderFlag.setResourcePath('/Cirkuits/3dlab/assets/');
-        mtlLoaderFlag.setPath('/Cirkuits/3dlab/assets/');
-        mtlLoaderFlag.load('flagCheckers.mtl', function (materials) {
-
-        materials.preload();
-
-        var objLoader = new THREE.OBJLoader();
-        objLoader.setMaterials(materials);
-        objLoader.setPath('/Cirkuits/3dlab/assets/');
-        objLoader.load('flagCheckers.obj', function (object) {        
-        object.name = "flagChecker";        
-        object.position.set(-120, 25, 1500);                
-        object.scale.set(100, 100, 100); //-------------------- Scaling object        
-        scene.add(object);               
-        });
-    }); 
-
-    //---------------------------------------------------------------- LOADING MODEL OF CHECKPOINTS      
-    var mtlLoaderFlag2 = new THREE.MTLLoader();
-        mtlLoaderFlag2.setResourcePath('/Cirkuits/3dlab/assets/');
-        mtlLoaderFlag2.setPath('/Cirkuits/3dlab/assets/');
-        mtlLoaderFlag2.load('flagCheckers.mtl', function (materials) {
-
-        materials.preload();
-
-        var objLoader = new THREE.OBJLoader();
-        objLoader.setMaterials(materials);
-        objLoader.setPath('/Cirkuits/3dlab/assets/');
-        objLoader.load('flagCheckers.obj', function (object) {        
-        object.name = "flagChecker";        
-        object.position.set(120, 25, 1500);                
-        object.scale.set(100, 100, 100); //-------------------- Scaling object        
-        scene.add(object);               
-        });
-    }); 
-
     //-- Creating the race track
     var geometryRaceTrack = new THREE.PlaneGeometry( 300, 20000, 32 );
     //var materialGradient = new THREE.MeshBasicMaterial( {color: 0x228B22, side: THREE.DoubleSide} );
@@ -184,19 +154,21 @@
 
     //-- Gameloop functions
     var update = function(){        	
-        var delta = clock.getDelta();        
+        var delta = clock.getDelta(); 
+        moveDistance = 200 * delta;       
         if (keyboard.pressed("w")) {
-            moveDistance = 200 * delta;
-        }else{
-            moveDistance = 0;
+            car.position.z -= moveDistance;
+            camera.position.z -= moveDistance;
+        }else if(keyboard.pressed("s")){
+            car.position.z += moveDistance;
+            camera.position.z += moveDistance;
         }
 
-        car.position.z -= moveDistance;
-        camera.position.z -= moveDistance;
+
     };
     var render = function(){
         renderer.render( scene, camera );
-       //composer.render();
+        //composer.render();
     };
     var GameLoop = function(){
         requestAnimationFrame( GameLoop );
